# solana-policy-firewall

./: .gitignore  ARCHITECTURE.md  DEMO.md  EVIDENCE.md  LICENSE  ONE_PAGER.md  PROMPT_INJECTION_TRANSCRIPT.md  README.md  THREAT_MODEL.md
.github/workflows/: ci.yml
docs/: DEMO_SCRIPT.md  devnet-evidence.json
plugins/solana-policy-firewall/: Cargo.toml  README.md  manifest.toml
plugins/solana-policy-firewall/src/: firewall.rs  lib.rs  programs.rs  rpc.rs  transaction.rs
plugins/solana-policy-firewall/tests/: firewall.rs
scripts/: verify-devnet-evidence.mjs  verify.sh
