[package]
name = "solana-policy-firewall"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fail-closed Solana transaction policy enforcement for ZeroClaw agents"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wit-bindgen = "0.46"

[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]

